load multiple config file. Use options pattern

--- a/portal.config.json
+++ b/portal.config.json
@@ -1,7 +1,9 @@
 ﻿{
-  "displayname": "WorkSafeBC Service Portal",
-  "adapters": [
-    "azdo",
-    "azure"
-  ]
+  "Portal": {
+    "displayname": "WorkSafeBC Service Portal",
+    "adapters": [
+      "azdo",
+      "azure"
+    ]
+  }
 }
